--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.8",
+    "@angular/cdk": "^11.2.8",
     "@angular/common": "~11.2.8",
     "@angular/compiler": "~11.2.8",
     "@angular/core": "~11.2.8",
@@ -27,7 +28,18 @@
     "@nguniversal/express-engine": "^11.2.1",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "@types/katex": "^0.11.1",
+    "@types/marked": "^3.0.2",
+    "@types/mermaid": "^8.2.7",
+    "@types/prettier": "^2.4.1",
     "express": "^4.15.2",
+    "highlight.js": "^11.3.1",
+    "katex": "^0.13.18",
+    "marked": "^3.0.8",
+    "mermaid": "^8.13.3",
+    "ng-marked-editor": "0.0.4",
+    "ng-marked-preview": "^0.1.1",
+    "prettier": "^2.4.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
