--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "katex": "^0.13.18",
     "marked": "^3.0.8",
     "mermaid": "^8.13.3",
-    "ng-marked-editor": "0.0.8",
-    "ng-marked-preview": "^0.2.1",
+    "ng-marked-editor": "^0.0.11",
+    "ng-marked-preview": "^0.0.11",
     "prettier": "^2.4.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
