fix:修复路由方式

--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod --base-href=./ --aot=true --build-optimizer=true --optimization=true --common-chunk=false --stats-json=true",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "dev:ssr": "ng run ng-docs:serve-ssr",
     "serve:ssr": "node dist/ng-docs/server/main.js",
     "build:ssr": "ng build --prod && ng run ng-docs:server:production",
-    "prerender": "ng run ng-docs:prerender"
+    "prerender": "ng run ng-docs:prerender",
+    "bundle-report": "webpack-bundle-analyzer dist/ng-docs/browser/stats.json"
   },
   "private": true,
   "dependencies": {
@@ -64,6 +65,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "webpack-bundle-analyzer": "^4.5.0"
   }
 }
