--- a/angular.json
+++ b/angular.json
@@ -51,8 +51,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "2mb",
-                  "maximumError": "5mb"
+                  "maximumWarning": "512kb",
+                  "maximumError": "1mb"
                 },
                 {
                   "type": "anyComponentStyle",
