--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod --base-href=./ --aot=true --build-optimizer=true --optimization=true --common-chunk=false --stats-json=true",
+    "build": "ng build --prod --base-href=./ --aot=true --build-optimizer=true --optimization=true --common-chunk=false --stats-json=true & npm run bundle-report",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -34,12 +34,12 @@
     "@types/mermaid": "^8.2.7",
     "@types/prettier": "^2.4.1",
     "express": "^4.15.2",
-    "highlight.js": "^11.3.1",
+    "highlightjs": "^9.16.2",
     "katex": "^0.13.18",
     "marked": "^3.0.8",
     "mermaid": "^8.13.3",
-    "ng-marked-editor": "^0.0.11",
-    "ng-marked-preview": "^0.0.11",
+    "ng-marked-editor": "^0.0.12",
+    "ng-marked-preview": "^0.0.12",
     "prettier": "^2.4.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
