--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,5 +39,5 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
           branch: main
-          folder: ./../dist/browser
+          folder: ./../dist/ng-docs/browser
           target-folder: docs
