--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,18 +24,17 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: pull lastest code
+        run: |
+          git pull main docs
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: install depandences
         run: |
           npm i
           npm run build
         
-      - name: publish
+      - name: deply
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
           branch: main
