--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: pull lastest code
         run: |
-          git pull main docs
+          git fetch main
 
       # Runs a set of commands using the runners shell
       - name: install depandences
