--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: pull lastest code
         run: |
-          git fetch main
+          git fetch origin
+          git merge origin/main
 
       # Runs a set of commands using the runners shell
       - name: install depandences
