--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,9 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [ docs ]
   pull_request:
-    branches: [ main ]
+    branches: [ docs ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -26,9 +26,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: pull lastest code
         run: |
-          git fetch origin
-          git merge origin/main
-
+          git pull
       # Runs a set of commands using the runners shell
       - name: install depandences
         run: |
